[tool.poetry]
name = "original-posting"
version = "0.3.4"
description = ""
authors = ["thautwarm <twshere@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wisepy2 = "^1.3"
diskcache = "^5.4.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
op = 'original_posting.cli:main'